tests/ui/type-qpath-unexpected2.stderr
error: no rules expected the token `@`
 --> $DIR/type-qpath-unexpected2.rs:6:22
  |
6 |     input = [{ <T as @ }]
  |                      ^

error: aborting due to previous error

